# tts

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
qvoice/: __init__.py
