[tool.poetry]
name = "qvoice"
version = "0.0.1"
description = "QVoice is a cloud service that enables you to convert text to lifelike speech. Is available for english and spanish languages and allows voice cloning."
authors = ["obahamonde <oscarmartinbahamondemunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tts = {git = "https://github.com/obahamonde/XTTS.git"}
fastapi-slim = "^0.111.0"
pydub = "^0.25.1"
uvicorn = "^0.29.0"
pytube = "12.1.3"
cachetools = "^5.3.3"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
